# PD2-market-sniper

./: .gitignore  .pd2_token  LICENSE  PD2 Dashboard.bat  README.md  SKILL.md  offer_history.json  sniper_state.json
assets/: _scan_notify.json  all_economy.json  currency_values.json  dashboard.html
pd2-sniper-app/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
pd2-sniper-app/src/: App.css  App.tsx  styles.css
pd2-sniper-app/src-tauri/: Cargo.toml  tauri.conf.json
pd2-sniper-app/src-tauri/capabilities/: default.json
pd2-sniper-app/src-tauri/src/: lib.rs  main.rs
pd2-sniper-app/src/test/: App.test.tsx  mocks.ts
scripts/: alerts.py  batch_offer_wss.py  check_offer_form.py  config.py  d2runewizard.py  dashboard.py  debug_listing.py  debug_market.py  debug_page.py  debug_single_offer.py  economy.py  explore_filters.py  explore_listing.py  explore_market.py  explore_offer.py  fetch_filters.py  get_currency.py  history.py  lookup_items.py  market_search.py  offers.py  parsers.py  pd2_api.py  scanner.py  scrape_economy.py  search_pd2tools.py  server.py  sniper.py  wiki_search.py
